--- a/public/app.css
+++ b/public/app.css
@@ -1,152 +1,1 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  font-size: 16px;
-  line-height: 1.6;
-  min-height: 100%;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-#wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 30px 15px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-@media (min-width: 991px) {
-  #wrapper {
-    flex-direction: row;
-    min-height: 100vh;
-    padding: 0 15px;
-  }
-}
-
-#wrapper canvas {
-  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.12);
-}
-
-@media (min-width: 991px) {
-  #wrapper canvas {
-    margin: 0 15px;
-  }
-}
-
-#wrapper #info {
-  display: flex;
-  flex-direction: column;
-  max-width: 100%;
-  width: 100%;
-}
-
-@media (min-width: 991px) {
-  #wrapper #info {
-    margin: 0 15px;
-    width: auto;
-  }
-}
-
-#wrapper #info #description {
-  order: 2;
-}
-
-@media (min-width: 991px) {
-  #wrapper #info #description {
-    order: 1;
-  }
-}
-
-#wrapper #info #description h1 {
-  padding: 0;
-  margin: 25px 0;
-  font-size: 22px;
-  text-align: center;
-}
-
-@media (min-width: 991px) {
-  #wrapper #info #description h1 {
-    font-size: 32px;
-    margin: 0 0 25px;
-    text-align: left;
-  }
-}
-
-#wrapper #info #description .formula {
-  font-size: 18px;
-  text-align: center;
-  font-style: italic;
-  background: #f5f5f5;
-  padding: 11px;
-  letter-spacing: 3px;
-}
-
-#wrapper #info #controls {
-  display: flex;
-  flex-direction: column;
-  border-bottom: 1px solid #eee;
-  padding: 20px 0;
-  align-items: center;
-  justify-content: center;
-  order: 1;
-}
-
-@media (min-width: 991px) {
-  #wrapper #info #controls {
-    order: 2;
-    border-bottom: 0;
-    border-top: 1px solid #eee;
-    padding: 20px 0 0;
-    margin-top: 30px;
-  }
-}
-
-#wrapper #info #controls table {
-  width: 100%;
-}
-
-#wrapper #info #controls table tr {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 2px 0;
-  width: 100%;
-}
-
-#wrapper #info #controls table tr td {
-  width: 100%;
-}
-
-#wrapper #info #controls table span {
-  display: inline-block;
-  width: 110px;
-  text-align: right;
-  padding-right: 10px;
-}
-
-#wrapper #info #controls table small {
-  display: inline-block;
-  padding: 0 8px;
-  background: #efefef;
-  border-radius: 3px;
-  min-width: 40px;
-  text-align: center;
-}
-
-#wrapper #info #controls table input:not([type=radio]) {
-  width: 100%;
-  margin-bottom: 10px;
-}
-
-#wrapper #info #controls table input[type=radio] {
-  margin-bottom: 20px;
-  margin-left: 0;
-}
-
+body,html{margin:0;padding:0;font-family:sans-serif;font-size:16px;line-height:1.6;min-height:100%}*{box-sizing:border-box}.hide{display:none!important}#wrapper{display:flex;flex-direction:column;align-items:center;justify-content:center;padding:30px 15px;max-width:1200px;margin:0 auto}@media (min-width:991px){#wrapper{flex-direction:row;min-height:100vh;padding:0 15px}}#wrapper canvas{box-shadow:0 0 8px 0 rgba(0,0,0,.12)}@media (min-width:991px){#wrapper canvas{margin:0 15px}}#wrapper #info{display:flex;flex-direction:column;max-width:100%;width:100%}@media (min-width:991px){#wrapper #info{margin:0 15px;width:auto}}#wrapper #info #description{order:2}@media (min-width:991px){#wrapper #info #description{order:1}}#wrapper #info #description h1{padding:0;margin:25px 0;font-size:22px;text-align:center}@media (min-width:991px){#wrapper #info #description h1{font-size:32px;margin:0 0 25px;text-align:left}}#wrapper #info #description .formula{font-size:18px;text-align:center;font-style:italic;background:#f5f5f5;padding:11px;letter-spacing:3px}#wrapper #info #description .collapsible-description{height:auto;transition:height .3s ease,background .3s ease;position:relative;overflow:hidden;padding-bottom:15px}#wrapper #info #description .collapsible-description:after{content:"";position:absolute;top:0;right:0;bottom:0;left:0;background:linear-gradient(180deg,transparent,transparent)}@media (min-width:991px){#wrapper #info #description .collapsible-description.collapsed{height:40px}#wrapper #info #description .collapsible-description.collapsed:after{background:linear-gradient(180deg,transparent,hsla(0,0%,100%,.9))}#wrapper #info #description .collapsible-description.collapsed #description-collapse-toggle-btn{transform:translateX(-50%)}}#wrapper #info #description .collapsible-description #description-collapse-toggle-btn{display:none;background:none;border:none;outline:none;padding:0;margin:0;position:absolute;left:50%;bottom:0;transform:translateX(-50%) rotate(180deg);z-index:1;cursor:pointer}#wrapper #info #description .collapsible-description #description-collapse-toggle-btn svg{width:20px;height:20px;transition:transform .25s ease}#wrapper #info #description .collapsible-description #description-collapse-toggle-btn:hover svg{transform:scale(1.35)}@media (min-width:991px){#wrapper #info #description .collapsible-description #description-collapse-toggle-btn{display:block}}#wrapper #info #controls{display:flex;flex-direction:column;border-bottom:1px solid #eee;padding:20px 0;align-items:center;justify-content:center;order:1}@media (min-width:991px){#wrapper #info #controls{order:2;border-bottom:0;border-top:1px solid #eee;padding:20px 0 0;margin-top:30px}}#wrapper #info #controls table{width:100%}#wrapper #info #controls table tr{display:flex;flex-direction:row;align-items:center;padding:2px 0;width:100%}#wrapper #info #controls table tr td{width:100%}#wrapper #info #controls table span{display:inline-block;width:110px;text-align:right;padding-right:10px}#wrapper #info #controls table small{display:inline-block;padding:0 8px;background:#efefef;border-radius:3px;min-width:40px;text-align:center}#wrapper #info #controls table input:not([type=radio]){width:100%;margin-bottom:10px}#wrapper #info #controls table input[type=radio]{margin-bottom:20px;margin-left:0}
